# lua-c-api-cheat-sheet

./: CMakeLists.txt  README.md
lua-5.3.6/: CMakeLists.txt
scripts/: example_10_reading_lua_tablearray_in_c.lua  example_11_reading_lua_tablearray_alternative.lua  example_1_run_script.lua  example_3_access_lua_variables.lua  example_4_passing_variable_to_lua.lua  example_5_access_lua_function.lua  example_6_calling_c_function_from_lua.lua  example_7_access_structs_in_lua.lua  example_8_reading_lua_table_in_c.lua  example_9_reading_lua_array_in_c.lua  test.lua
src/: main.cpp
src/examples/: example_10_reading_lua_tablearray_in_c.hpp  example_11_reading_lua_tablearray_alternative.hpp  example_1_run_script.hpp  example_2_run_string.hpp  example_3_access_lua_variables.hpp  example_4_passing_variable_to_lua.hpp  example_5_access_lua_function.hpp  example_6_calling_c_function_from_lua.hpp  example_7_access_structs_in_lua.hpp  example_8_reading_lua_table_in_c.hpp  example_9_reading_lua_array_in_c.hpp
